// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reads altsantiri 1`] = `
Array [
  Object {
    "text": "Ο Κωστής Σαββιδάκης υποδύεται τον παππά στη σειρά Άγριες Μέλισσες και γνωρίζει μεγάλη απήχηση.",
    "type": "p",
  },
  Object {
    "text": "Ο ηθοποιός την Πέμπτη φιλοξενήθηκε στην εκπομπή Το πρωινό μιλώντας για τη σειρά αλλά και για τη ζωή του.",
    "type": "p",
  },
  Object {
    "src": "https://www.altsantiri.gr/wp-content/uploads/2020/01/vlcsnap-00027.jpg",
    "type": "img",
  },
  Object {
    "text": "Με έχει βαφτίσει παπάς, η γυναίκα του η παπαδιά και ο γιος του, ήμουν από μικρός ως παπαδάκι, στο κατηχητικό. Είμαι θρήσκος, θυμιατίζω σχεδόν κάθε μέρα στο σπίτι, ρίχνω αγιασμό. Δεν ντρέπομαι να το πω, γιατί δυστυχώς, πολλοί έχουμε φτάσει στο σημείο να ντρεπόμαστε να πούμε ότι είμαστε Χριστιανοί Ορθόδοξοι. Σέβομαι την κάθε θρησκεία και θέλω να σέβονται και τη δικιά μου θρησκεία. Νομίζω ότι προσπαθούν να μας απομακρύνουν από τα ήθη και τα έθιμά μας, τη θρησκεία μας, ειδικά εμάς τους Έλληνες.",
    "type": "p",
  },
  Object {
    "src": "https://www.altsantiri.gr/wp-content/uploads/2020/01/vlcsnap-00029.jpg",
    "type": "img",
  },
  Object {
    "text": "Δεν μπορώ να επιτρέψω σε οποιονδήποτε να μπει σε ένα μοναστήρι να κάψει εικόνες, να σπάσει σταυρούς. Θα μπω να τον κουτουλήσω. Όπως ένας μουσουλμάνος θα μου κόψει το κεφάλι αν πειράξω τη θρησκεία του και το σέβομαι, έτσι πρέπει να λειτουργούμε κι εμείς. Όχι να τον σφάξουμε, αλλά λες λίγο ένα όριο. Είναι η πίστη μου, η θρησκεία μου.",
    "type": "p",
  },
  Object {
    "text": "Tο altsantiri.gr δημοσιεύει άμεσα κάθε σχόλιο. Ωστόσο δεν υιοθετούμε τις απόψεις αυτές καθώς εκφράζουν αποκλειστικά τον εκάστοτε σχολιαστή. Σχόλια με ύβρεις διαγράφονται χωρίς προειδοποίηση. Χρήστες που δεν τηρούν τους όρους χρήσης αποκλείονται.",
    "type": "p",
  },
]
`;

exports[`reads cnn 1`] = `
Array [
  Object {
    "text": "Τα αποκαλυπτήρια του κέρινου ομοιώματος της Νίκι Μινάζ στο μουσείο κέρινων ομοιωμάτων μαντάμ Τισό του Βερολίνου προκάλεσαν ποικίλες αντιδράσεις. Από θαυμασμό έως γέλια.",
    "type": "p",
  },
  Object {
    "text": "Πολλοί από τους φαν της διάσημης ράπερ, που είχε ανακοινώσει τον περασμένο Σεπτέμβριο τα σχέδιά της να αποχωρήσει από τη μουσική βιομηχανία, επεσήμαναν ότι το κέρινο ομοίωμά της, που τη δείχνει πεσμένη στα τέσσερα, θυμίζοντας ένα στιγμιότυπο από το προκλητικό βίντεοκλιπ Anaconda, δεν μοιάζει καθόλου στη Μινάζ. Ποια είναι αυτή; Δείχνει σαν κάποια λευκή που “κάηκε” στο solarium. Kι αυτό το φόντο με τη ζούγκλα;, σχολιάζει ένας φαν της Μινάζ στο Twitter.",
    "type": "p",
  },
  Object {
    "text": "Αυτό είναι ρατσισμός! Ούτε το σωστό χρώμα της επιδερμίδας της δεν πέτυχαν!, συμπληρώνει ένας άλλος. Χρήστες του Twitter υποστηρίζουν μάλιστα ότι το εν λόγω κέρινο ομοίωμα περισσότερο μοιάζει στην Κόρτνεϊ Καρντάσιαν.",
    "type": "p",
  },
  Object {
    "src": "https://cdn.cnngreece.gr/images/news/2020/01/09/AP_20008559514987.jpg",
    "type": "img",
  },
  Object {
    "text": "@Britta Pedersen/DPA via AP",
    "type": "p",
  },
  Object {
    "src": "https://cdn.cnngreece.gr/images/news/2020/01/09/AP_19127037996201.jpg",
    "type": "img",
  },
  Object {
    "text": "@Evan Agostini/Invision/AP",
    "type": "p",
  },
  Object {
    "text": "Η Μινάζ το λάτρεψε",
    "type": "h",
  },
  Object {
    "text": "Και μπορεί κανείς να χρειάζεται πράγματι αρκετή φαντασία για να βρει ομοιότητες ανάμεσα στη Νίκι Μινάζ και το κέρινο ομοίωμά της, αλλά όπως προκύπτει, η ίδια η τραγουδίστρια το είχε εγκρίνει. Πριν από πέντε χρόνια, τον Αύγουστο του 2015, το ίδιο κέρινο ομοίωμα είχε εκτεθεί στο μουσείο μαντάμ Τισό στο Λας Βέγκας. Μάλιστα οι συνεργάτες της Μινάζ είχαν συνεργαστεί με τους δημιουργούς του και η ίδια η ράπερ είχε ανεβάσει βίντεο στο οποίο δήλωνε ότι το λατρεύει. Περί ορέξεως...",
    "type": "p",
  },
]
`;

exports[`reads in 1`] = `
Array [
  Object {
    "text": "Ένα συγκινητικό στιγμιότυπο καταγράφηκε σήμερα Πέμπτη στη δίκη της Χρυσής Αυγής.",
    "type": "p",
  },
  Object {
    "text": "Με δάκρυα στα μάτια, εμφανώς συγκινημένη από την πολύωρη αγόρευση της συνηγόρου της, Χρύσας Παπαδοπούλου, η Μάγδα Φύσσα την αγκάλιασε και την φίλησε.",
    "type": "p",
  },
  Object {
    "text": "Επτά ώρες, περίπου πέντε την Τετάρτη και δύο την Πέμπτη, αγόρευε η συνήγορος της οικογένειας Φύσσα, ζητώντας τελικώς την καταδίκη όλων των κατηγορουμένων τόσο για τη δολοφονία του Παύλου Φύσσα όσο και για την ένταξη και διεύθυνση της εγκληματικής οργάνωσης, σχεδόν τρεις εβδομάδες μετά την πρόταση – ξέπλυμα της εισαγγελέως.",
    "type": "p",
  },
  Object {
    "text": "Με ένα κομμάτι χαρτί και μελάνι αντιμετώπιζε ο Φύσσας τους φασίστες, δεν σηκωνόταν στις 11 το βράδυ να πάει να μαχαιρώσει φασίστες, δεν υπάκουε στις εντολές κανενός πυρηνάρχη, είχε τονίσει η Χρύσα Παπαδοπούλου την Τετάρτη.",
    "type": "p",
  },
  Object {
    "text": "Με χειροκροτήματα τέλειωσε η αγόρευση της Χρύσας Παπαδοπούλου",
    "type": "h",
  },
  Object {
    "text": "Στο τέλος της αγόρευσής της, στην οποία συνόψισε το αποδεικτικό υλικό αλλά και τις αντιφάσεις των κατηγορουμένων, η Χρύσα Παπαδοπούλου έκλεισε καταχειροκροτούμενη από το ακροατήριο.",
    "type": "p",
  },
  Object {
    "text": "Λίγα λεπτά αργότερα, η Μάγδα Φύσσα, που παρακολούθησε το σύνολο της αγόρευσης ξαναζώντας το βράδυ της δολοφονίας αλλά και το παρασκήνιό του σε μια ιδιαίτερα δύσκολη και για την ίδια διαδικασία, αγκάλιασε, φίλησε και συνεχάρη συγκινημένη την επίσης φορτισμένη συνήγορο.",
    "type": "p",
  },
  Object {
    "text": "Δείτε τις φωτογραφίες:",
    "type": "h",
  },
  Object {
    "src": "https://www.in.gr/wp-content/uploads/2020/01/fyssa1-1-600x400.jpg",
    "type": "img",
  },
  Object {
    "src": "https://www.in.gr/wp-content/uploads/2020/01/fyssa2-600x400.jpg",
    "type": "img",
  },
]
`;

exports[`reads in2 1`] = `
Array [
  Object {
    "text": "Η Jimena Sanchez από το Μεξικό ανταγωνίζεται στα ίσα την Κιμ Καρντάσιαν!",
    "type": "p",
  },
  Object {
    "text": "View this post on Instagram",
    "type": "p",
  },
  Object {
    "text": "A post shared by Jimena Sanchez (@jimenasanchezmx) on Jan 6, 2020 at 4:05pm PST",
    "type": "p",
  },
  Object {
    "text": "Η Κιμ Καρντάσιαν των…. φιλάθλων",
    "type": "h",
  },
  Object {
    "text": "Τη δική τους Κιμ Καρντάσιαν έχουν οι φίλαθλοι στο Μεξικό, οι οποίοι στο πρόσωπο της Jimena Sanchez έχουν βρει έναν καλό λόγο να απολαμβάνουν τα αθλητικά στους τηλεοπτικούς τους δέκτες.",
    "type": "p",
  },
  Object {
    "text": "Καυτό αθλητικό δελτίο",
    "type": "h",
  },
  Object {
    "text": "Η εντυπωσιακή μελαχρινή του δικτύου Fox Sports είναι σίγουρα η πιο καυτή παρουσία στη μεξικάνικη τηλεόραση και ο ανδρικός πληθυσμός δε μένει ασυγκίνητος στην εικόνα της.",
    "type": "p",
  },
  Object {
    "text": "Οι καμπύλες αναμφίβολα το δυνατό της σημείο, ενώ η Jimena Sanchez φροντίζει μέσα από το λογαριασμό της στο Instagram να ανεβάζει φωτογραφίες, που τις αναδεικνύουν.",
    "type": "p",
  },
  Object {
    "text": "Το Instagram",
    "type": "h",
  },
  Object {
    "text": "Οι followers της Sanchez ξεπερνούν τους 7,3 εκατομμύρια, και μια μια βόλτα στο λογαριασμός της, από τις πρώτες κιόλας αναρτήσεις μπορείς να καταλάβεις τον σέξι χαρακτήρα και τον αισθησιασμό της.",
    "type": "p",
  },
]
`;

exports[`reads lifo 1`] = `
Array [
  Object {
    "src": "https://mikropragmata.lifo.gr/wp-content/uploads/2020/01/Screenshot_3-7-758x371.jpg",
    "type": "img",
  },
  Object {
    "text": "Η προτομή αποτελεί δωρεά του Υπουργείου Εξωτερικών της Κύπρου μετά από προσωπική πρωτοβουλία του Υπουργού Δρ. Νίκου Χριστοδουλίδη προς την Αγία Νάπα, δωρεά που είχε ανακοινώσει κατά τη διάρκεια του 4ου Συμποσίου Σεφέρη που πραγματοποιήθηκε πρόσφατα στο Δημοτικό Μουσείο Θάλασσα. Σε γραπτή ανακοίνωση του Δήμου Αγίας Νάπας αναφέρεται ότι το έργο διαστάσεων 90 Χ 75 Χ 80 εκατοστών, είναι κατά 50% μεγαλύτερο από το φυσικό μέγεθος μίας συνηθισμένης προτομής και κατασκευάστηκε από πηλό.",
    "type": "p",
  },
  Object {
    "text": "Η δημιουργός του έργου Μαρία Κυπριανού ανέφερε ότι αποτελεί μεγάλη τιμή για την ίδια και ταυτόχρονα μεγάλη ευθύνη η ανάθεση από τον Δήμο Αγίας Νάπας της φιλοτέχνησης της προτομής του Γιώργου Σεφέρη, ο οποίος ανήκει στην παγκόσμια ελίτ των σπουδαίων ποιητών. Γι’αυτό και προσπάθησα όσο ήταν δυνατό να πλησιάσω τη μορφή του μεγάλου Ελληνα Νομπελίστα, ώστε να θυμίζει τον ποιητή και συγχρόνως ήθελα να το κάνω με το δικό μου τρόπο για να μην είναι στα πρότυπα της κλασσικής και αυστηρής προτομής.",
    "type": "p",
  },
  Object {
    "text": "Ο Πρόεδρος του Διεθνούς Συμποσίου Γλυπτικής Κίκης Κωνσταντίνου εξέφρασε την ικανοποίησή του και έδωσε τα εύσημα στην Κύπρια καλλιτέχνη για το εξαιρετικό όπως το χαρακτήρισε έργο της.",
    "type": "p",
  },
  Object {
    "text": "Το σχόλιο που τα λέει όλα είναι αυτό:",
    "type": "p",
  },
  Object {
    "text": "Με συγχωρείτε αλλά αυτό το τερατούργημα είναι προσβολή στη μνήμη του κορυφαίου ποιητή, με τον οποίο δεν έχει καν την παραμικρή ομοιότητα. Κάποτε δεν αρκούν οι καλές προθέσεις…😳😡 https://t.co/kaTo5QWpo1",
    "type": "p",
  },
  Object {
    "text": "Με συγχωρείτε αλλά αυτό το τερατούργημα είναι προσβολή στη μνήμη του κορυφαίου ποιητή, με τον οποίο δεν έχει καν την παραμικρή ομοιότητα. Κάποτε δεν αρκούν οι καλές προθέσεις…😳😡",
    "type": "p",
  },
  Object {
    "text": "Δεν συμφωνώ πως δεν έχει την παραμικρή ομοιότητα. Το πρόσωπο μου τον θυμίζει, όμως είναι μάλλον η τεχνοτροπία και η αναλογία που μοιάζουν κάπως.",
    "type": "p",
  },
  Object {
    "text": "Ο Σεφέρης εδώ δίνει την αίσθηση παρωδίας. Μοιάζει με υπερμεγέθες κουκλάκι, ή, ας το παραδεχτούμε, με τον Yoda.",
    "type": "p",
  },
  Object {
    "src": "https://mikropragmata.lifo.gr/wp-content/uploads/2020/01/Screenshot_2-5-758x510.jpg",
    "type": "img",
  },
  Object {
    "text": "Nα μερικές ακόμη αντιδράσεις…",
    "type": "p",
  },
  Object {
    "src": "https://mikropragmata.lifo.gr/wp-content/uploads/2020/01/Screenshot_9-1.jpg",
    "type": "img",
  },
  Object {
    "src": "https://mikropragmata.lifo.gr/wp-content/uploads/2020/01/Screenshot_8-4.jpg",
    "type": "img",
  },
  Object {
    "src": "https://mikropragmata.lifo.gr/wp-content/uploads/2020/01/Screenshot_7-1.jpg",
    "type": "img",
  },
  Object {
    "src": "https://mikropragmata.lifo.gr/wp-content/uploads/2020/01/Screenshot_4-6.jpg",
    "type": "img",
  },
]
`;

exports[`reads lifo2 1`] = `
Array [
  Object {
    "text": "Ταξίδια, πάρτι, αγόρια, κορίτσια.",
    "type": "h",
  },
  Object {
    "src": "https://example.com/icache/520/636/1/1587134_demos_mozy_80486421_1880878845389643_2812148054348735358_n.jpg",
    "type": "img",
  },
  Object {
    "text": "Δείτε κι εσείς τις φωτό σας στο timeline μας (προσθέτοντας το #instalifo στις φωτογραφίες που ανεβάζετε στο instagram).",
    "type": "p",
  },
  Object {
    "text": "Για να λαμβάνετε κάθε εβδομάδα στο email σας μια επιλογή από τα καλύτερα άρθρα του lifo.gr",
    "type": "p",
  },
]
`;

exports[`reads madata 1`] = `
Array [
  Object {
    "text": "Ένα τεστ αίματος που αποκαλύπτει αν κάποιος κοιμάται αρκετά, αναπτύσσουν Ιταλοί επιστήμονες. Το τεστ θα βοηθήσει, μεταξύ άλλων, τους γονείς να γνωρίζουν κατά πόσο το παιδιά τους πάσχουν από χρόνια στέρηση ύπνου.",
    "type": "p",
  },
  Object {
    "text": "Οι ερευνητές, με επικεφαλής τον δρ Φάμπιο Λάουρα του Ινστιτούτου Επιστημών της Διατροφής του Εθνικού Συμβουλίου Ερευνών της Ιταλίας, που έκαναν τη σχετική δημοσίευση στο περιοδικό πειραματικής φυσιολογίας Experimental Physiology, βασίζουν το τεστ τους στην ανακάλυψη ότι μικροσκοπικά τμήματα του RNA (του ξαδέρφου μορίου του DNA, το οποίο μεταφράζει το γενετικό κώδικα σε πρωτεΐνες) μεταβάλλονται στο αίμα των ανθρώπων που δεν κοιμούνται αρκετά.",
    "type": "p",
  },
  Object {
    "text": "Η μελέτη μας δείχνει για πρώτη φορά ότι τα επίπεδα συγκεκριμένων microRNA που κυκλοφορούν στο αίμα, είναι διαφορετικά σε όσους κοιμούνται λίγο, σε σχέση με όσους κοιμούνται φυσιολογικά. Αυτό θα επιτρέψει στους γιατρούς να προσδιορίζουν εύκολα κατά πόσο τα παιδιά κοιμούνται αρκετά, χρησιμοποιώντας ένα απλό τεστ αίματος, που θα παρέχει ενδείξεις και για άλλες όψεις της υγείας, δήλωσε ο δρ Λάουρα.",
    "type": "p",
  },
  Object {
    "text": "Προηγούμενες έρευνες έχουν δείξει ότι ο ύπνος είναι ουσιώδης για την υγεία και τις σχολικές επιδόσεις των παιδιών, ενώ αργότερα στη ζωή η έλλειψη του σχετίζεται με διάφορα προβλήματα υγείας.",
    "type": "p",
  },
  Object {
    "text": "Οι ερευνητές μελέτησαν δείγματα αίματος από 111 υγιή παιδιά και εφήβους από οκτώ ευρωπαϊκές χώρες (μεταξύ των οποίων η Κύπρος), που χωρίστηκαν σε δύο ομάδες, του επαρκούς και τους ανεπαρκούς ύπνου. Ως ανεπαρκής για τα παιδιά θεωρήθηκε ο ύπνος κάτω των εννέα ωρών και για τους εφήβους κάτω των οκτώ ωρών.",
    "type": "p",
  },
  Object {
    "text": "Διαπιστώθηκε ότι -άσχετα με τη χώρα προέλευσης- είναι δυνατό, αναλύοντας τα microRNA στο αίμα, να διακρίνει κανείς με αρκετή αξιοπιστία αν κάποιος κοιμάται αρκετά ή όχι. Θα χρειαστεί πάντως κάποιος χρόνος, εωσότου υπάρξει διαθέσιμο ένα κανονικό κλινικό τεστ.",
    "type": "p",
  },
]
`;

exports[`reads newsbeast 1`] = `
Array [
  Object {
    "text": "Την παράταση της προθεσμίας υποβολής αιτήσεων έως την Πέμπτη 16 Ιανουαρίου 2020 ανακοίνωσε το Ελληνικό Ανοικτό Πανεπιστήμιο.",
    "type": "p",
  },
  Object {
    "text": "Τα Προπτυχιακά και Μεταπτυχιακά Προγράμματα Σπουδών με έναρξη φοίτησης το εαρινό εξάμηνο του 2020, τα οποία αφορά η παράταση υποβολής αιτήσεων είναι τα εξής:",
    "type": "p",
  },
  Object {
    "text": "Προπτυχιακά Προγράμματα",
    "type": "h",
  },
  Object {
    "text": "1. Δημόσια Διοίκηση",
    "type": "p",
  },
  Object {
    "text": "2. Διοίκηση Τουρισμού",
    "type": "p",
  },
  Object {
    "text": "Μεταπτυχιακά Προγράμματα",
    "type": "h",
  },
  Object {
    "text": "1. Αθλητικές Σπουδές: Κοινωνιολογία, Ιστορία, Ανθρωπολογία",
    "type": "p",
  },
  Object {
    "text": "2. Κοινωνική και Αλληλέγγυα Οικονομία",
    "type": "p",
  },
  Object {
    "text": "3. Διαχείριση Γήρανσης και Χρόνιων Νοσημάτων",
    "type": "p",
  },
  Object {
    "text": "4. Διοίκηση Εφοδιαστικής Αλυσίδας",
    "type": "p",
  },
  Object {
    "text": "5. Δημιουργική Γραφή",
    "type": "p",
  },
  Object {
    "text": "6. Language Education for Refugees and Migrants",
    "type": "p",
  },
  Object {
    "text": "7. Δημόσια Ιστορία",
    "type": "p",
  },
  Object {
    "text": "8. Σύγχρονες τάσεις στη γλωσσολογία για εκπαιδευτικούς",
    "type": "p",
  },
  Object {
    "text": "9. Διδακτική της Αγγλικής ως Ξένης/Διεθνούς Γλώσσας",
    "type": "p",
  },
  Object {
    "text": "10. Διδακτική της Γερμανικής ως Ξένης Γλώσσας",
    "type": "p",
  },
  Object {
    "text": "11. Βιοπληροφορική και Νευροπληροφορική",
    "type": "p",
  },
  Object {
    "text": "12. Χημική και Βιομοριακή Ανάλυση",
    "type": "p",
  },
  Object {
    "text": "Υπενθυμίζεται ότι η υποβολή των αιτήσεων γίνεται αποκλειστικά μέσω του διαδικτύου και το σύστημα υποβολής αιτήσεων θα παραμείνει ανοικτό μέχρι τη συμπλήρωση του αριθμού των προσφερόμενων θέσεων και σε κάθε περίπτωση όχι πέραν της προθεσμίας της 16ης Ιανουαρίου 2020 (ώρα 12:00).",
    "type": "p",
  },
]
`;

exports[`reads newsbomb 1`] = `
Array [
  Object {
    "text": "Το Καφέ της Χαράς έκανε πρεμιέρα την παραμονή της Πρωτοχρονιάς και επέστρεψε στην μικρή οθόνη, έπειτα από πολλά χρόνια. Πλέον, το ενδιαφέρον στρέφεται στους Μανωλάκη και Βάλια, οι οποίοι θα πάρουν την… σκυτάλη από τον Πώποτα και την Πρωτευουσιάνα.",
    "type": "p",
  },
  Object {
    "text": "Διαβάστε περισσότερα ΕΔΩ",
    "type": "p",
  },
]
`;

exports[`reads newsit 1`] = `
Array [
  Object {
    "text": "Drive -",
    "type": "p",
  },
  Object {
    "src": "https://www.newsit.gr/wp-content/themes/newsit/common/imgs/drive-logo.png",
    "type": "img",
  },
  Object {
    "src": "https://www.newsit.gr/wp-content/uploads/2020/01/fiat_Panda_500_hybrid.jpg",
    "type": "img",
  },
  Object {
    "text": "Διαθέσιμα από το πρώτο τρίμηνο της χρονιάς τα ήπια υβριδικά της μάρκας που είναι το πρώτο βήμα για τον εξηλεκτρισμό της.",
    "type": "h",
  },
  Object {
    "text": "Τα FΙΑΤ 500 και FΙΑΤ Panda είναι εμβληματικά μοντέλα στην κατηγορία των αυτοκινήτων πόλης στην Ευρωπαϊκή, αλλά και την Ελληνική αγορά αυτοκινήτου. Αυτά τα δύο μοντέλα επέλεξε ο Όμιλος Fiat Chrysler Automobiles για να εφαρμόσει μια νέα υβριδική τεχνολογία. Τα νέα 500 Hybrid και Panda Hybrid, τα οποία θα ξεκινήσουν να είναι διαθέσιμα το 1ο τρίμηνο του έτους, θα φέρουν επανάσταση για ακόμα μία φορά στις αστικές μετακινήσεις, κάνοντας προσιτή την υβριδική τεχνολογία σε όλους.",
    "type": "p",
  },
]
`;

exports[`reads skai 1`] = `
Array [
  Object {
    "text": "Η Τεχεράνη θα κάνει αύριο Σάββατο ανακοινώσεις σχετικά με τα αίτια της συντριβής του ουκρανικού αεροσκάφους, που είχε αναχωρήσει από την Τεχεράνη για το Κίεβο, νωρίτερα αυτήν την εβδομάδα, μεταδίδει σήμερα το ημιεπίσημο πρακτορείο ειδήσεων Fars, επικαλούμενο μια πηγή με γνώση της υπόθεσης.",
    "type": "p",
  },
  Object {
    "text": "Οι ανακοινώσεις θα γίνουν μετά τη συνεδρίαση της επιτροπής που διερευνά τα αεροπορικά δυστυχήματα.",
    "type": "p",
  },
  Object {
    "text": "Πηγή: ΑΠΕ-ΜΠΕ",
    "type": "p",
  },
]
`;

exports[`reads skai2 1`] = `
Array [
  Object {
    "text": "Αυτές είναι οι 11 διαγωνιζόμενες:",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/korina_adramitidoy_10.jpg",
    "type": "img",
  },
  Object {
    "text": "Κορίνα Αδραμιτίδου, 36 ετών, Βόλος",
    "type": "p",
  },
  Object {
    "text": "Γεννήθηκε στη Θεσσαλονίκη, αλλά σε ηλικία 15 ετών μετακόμισε με την οικογένειά της στο Βόλο, όπου και ζει έως σήμερα. Σπούδασε πληροφορική, αλλά σε ηλικία 20 ετών ξεκίνησε να δουλεύει σε ένα κατάστημα ρούχων Ελλήνων σχεδιαστών. Αγάπησε τόσο πολύ αυτή τη δουλειά ώστε σήμερα, 16 χρόνια μετά να εξακολουθεί να εργάζεται εκεί. Δήλωσε συμμετοχή στο My Style Rocks γιατί πιστεύει πως μια γυναίκα με παραπάνω κιλά μπορεί να έχει και στυλ και άποψη. Δεν την ενοχλεί η καλοπροαίρετη κριτική για το στυλ της, καθώς πιστεύει ότι την κάνει καλύτερη, ωστόσο δηλώνει αποφασισμένη να μην αφήσει κανέναν να σχολιάσει κακόβουλα τα κιλά της.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/efi_gkoyta_8.jpg",
    "type": "img",
  },
  Object {
    "text": "Έφη Γκούτα, 23 ετών, Θεσσαλονίκη",
    "type": "p",
  },
  Object {
    "text": "Η Έφη Γκούτα γεννήθηκε και μεγάλωσε στη Θεσσαλονίκη. Έχει σπουδάσει σχέδιο μόδας και είναι απόφοιτη σχολής μακιγιάζ. Από τα 17 δούλευε για να είναι οικονομικά ανεξάρτητη και να μην στηρίζεται στους γονείς της. Δηλώνει γνήσια Θεσσαλονικιά, αφού της αρέσει να είναι κάθε στιγμή της ημέρας περιποιημένη και το στυλ της να ανταποκρίνεται πάντα στην τελευταία λέξη της μόδας! Με 70.000 followers στο Instagram απολαμβάνει να δημιουργεί τις δικές της προτάσεις μόδας για όσες την ακολουθούν και την εμπιστεύονται.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/maria_kazarian_10.jpg",
    "type": "img",
  },
  Object {
    "text": "Μαρία Καζαριάν, 25 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "Γεννήθηκε και μεγάλωσε στην Αθήνα. Οι γονείς της έχουν καταγωγή από την Αρμενία. H Μαρία έχει 3 αδέρφια: την Ειρήνη, τον Δημήτρη και τον Γιάννη. Η Ειρήνη είναι γνωστή σε όλους μας, αφού ήταν η νικήτρια του περσινού (2018) Greece’s Next Top Model. Σπούδασε make up και ονυχοπλαστική, δεν ασχολήθηκε ωστόσο ποτέ. Τον τελευταίο χρόνο έχει δημιουργήσει δική της επιχείρηση, η οποία προμηθεύει εξοπλισμό αισθητικής σε ινστιτούτα. Από μικρή λάτρευε τη μόδα. Θεωρεί το στυλ της classy, ενώ όνειρό της είναι να δημιουργήσει τη δική της κολεξιόν ρούχων. Υπόσχεται να κερδίσει το φετινό Μy Style Rocks, αφού, όπως λέει, η νίκη είναι στο DNA της οικογένειας Καζαριάν!",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/tonia_koympa_32.jpg",
    "type": "img",
  },
  Object {
    "text": "Τόνια Κούμπα, 32 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "Η Τόνια κατάγεται από τη Μυτιλήνη και ζει μόνιμα στην Αθήνα. Είναι δημοσιογράφος και παρουσιάστρια. Από την ηλικία των 5 έως 15 ετών ασχολήθηκε με το παιδικό μόντελινγκ και τη διαφήμιση με παρότρυνση του πατέρα της. Πριν από τρία χρόνια είχε ένα πολύ σοβαρό ατύχημα. Το πάνω χείλος της κόπηκε στα τρία, όταν της επιτέθηκε ένας σκύλος. Χρειάστηκαν 8 μήνες εντατικών θεραπειών και επεμβάσεων για να αναρρώσει πλήρως. Δήλωσε συμμετοχή για να δείξει τη διαφορετικότητά της.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/kristen_leotsakoy_16.jpg",
    "type": "img",
  },
  Object {
    "text": "Κρίστεν Λεωτσάκου, 28 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "Η Κρίστεν γεννήθηκε και μεγάλωσε στην Αθήνα. Η μητέρα της έχει καταγωγή από τα νησιά Αζόρες και ο πατέρας της είναι Έλληνας. Και οι δυο γιαγιάδες της ήταν μοδίστρες και από εκείνες πήρε τα πρώτα ερεθίσματα σχετικά με τη μόδα. Από μικρή θυμάται να λέει ότι θέλει να γίνει σχεδιάστρια μόδας. Αποφάσισε, λοιπόν, τότε να ασχοληθεί με το fashion blogging. Είναι υπέρμαχος της οικολογίας. Από το 2014 είναι vegan και υποστηρίζει το zero waste living. Για το λόγο αυτό έχει ανοίξει κανάλια στο YouTube που αριθμούν πάνω από 300.000 subscribers. Είναι οπαδός της θετικής μόδας, ντύνεται δηλαδή αποκλειστικά με μεταχειρισμένα ρούχα ή ρούχα που έχουν φτιαχτεί από οικολογικά υλικά. Δήλωσε συμμετοχή στο Μy Style Rocks για να αποδείξει ότι μια γυναίκα μπορεί να έχει τέλειο στιλ, φορώντας ρούχα second hand.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/kiara_markezi_19.jpg",
    "type": "img",
  },
  Object {
    "text": "Κιάρα Μαρκέζη, 19 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "Η Κιάρα γεννήθηκε και μεγάλωσε στην Αθήνα. Η μητέρα της είναι φωτογράφος μοντέλων (Μαρία Μαρκέζη). Πατέρας της είναι ο Αλέξανδρος Τσοχατζόπουλος, γιος του Άκη. Οι γονείς της χώρισαν όταν εκείνη ήταν ενός έτους. Ο πατέρας της ξαναπαντρεύτηκε και έχει δημιουργήσει νέα οικογένεια. Έχει κρατήσει το επώνυμο της μητέρας της γιατί δεν θέλει να την ταυτίζουν με τον παππού της, παρά τη μεγάλη αδυναμία που του έχει. Ξεκίνησε να ασχολείται με το μόντελινγκ από 14 ετών. Λόγω των γνωριμιών της μητέρας της έχει συνεργαστεί με πολλούς γνωστούς σχεδιαστές. Έχει συμμετάσχει σε πολλές επιδείξεις και φωτογραφήσεις. Μετά το σχολείο ξεκίνησε να σπουδάσει υποκριτική, αλλά σταμάτησε γιατί κατάλαβε ότι δεν της ταιριάζει. Πλέον έχει καταλήξει ότι θέλει να σπουδάσει styling και να γίνει fashion blogger.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/eyrydiki_papadopoyloy_16.jpg",
    "type": "img",
  },
  Object {
    "text": "Ευρυδίκη Παπαδοπούλου, 34 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "H Ευρυδίκη Παπαδοπούλου γεννήθηκε και μεγάλωσε στο Χαϊδάρι. Πήγε σε τεχνικό λύκειο και σπούδασε μακιγιάζ και κομμωτική. Σε ηλικία 18 ετών έλαβε μέρος στα καλλιστεία ομορφιάς Playmate. Ωστόσο, ο χώρος του μόντελινγκ δεν ταίριαζε καθόλου στο χαρακτήρα της και έτσι αποφάσισε να μην συνεχίσει. Μία δεκαετία αργότερα, πέρασε μία σοβαρή περιπέτεια με την υγεία της. Το γεγονός αυτό της έδωσε τεράστια δύναμη και αυτοπεποίθηση. Για το λόγο αυτό δηλώνει πως το ταξίδι της στο My Style Rocks θα είναι για εκείνη μια… πολύ εύκολη υπόθεση. Της αρέσει να κάνει πράγματα για τον εαυτό της και έχει δημιουργήσει τη δική της σειρά κοσμημάτων.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/stella_passari_24.jpg",
    "type": "img",
  },
  Object {
    "text": "Στέλλα Πάσσαρη, 26 ετών, Θεσσαλονίκη",
    "type": "p",
  },
  Object {
    "text": "Η Στέλλα γεννήθηκε και μεγάλωσε στη Θεσσαλονίκη. Μόλις τελείωσε τις σπουδές της στην Οργάνωση και Διοίκηση Επιχειρήσεων στο Πανεπιστήμιο Μακεδονίας. Αγαπημένη της πρώην παίκτρια του Μy Style Rocks είναι - φυσικά - η Ιωάννα Τούνη, με την οποία διατηρούν κατάστημα με ρούχα στη Θεσσαλονίκη. Αυτό που τις ένωσε είναι η κοινή αγάπη που έχουν για τη μόδα. Θεωρεί πως το στυλ της είναι τόσο ιδιαίτερο και μοναδικό που με άνεση θα στεφτεί νικήτρια του φετινού My Style Rocks.",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/basiliki_soylani_21.jpg",
    "type": "img",
  },
  Object {
    "text": "Βασιλική Σουλάνη, 27 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "Η Βασιλική έχει καταγωγή από Λευκάδα και Κέρκυρα, αλλά μεγάλωσε στην Αθήνα. Ο πατέρας της είναι δάσκαλος και η μητέρα της ασχολείται με τα οικιακά. Από μικρή της άρεσε να ντύνεται ιδιαίτερα και θυμάται να λέει από παιδί ότι θέλει να γίνει σχεδιάστρια μόδας. Αν και στο σχολείο άκουγε πολλά αρνητικά σχόλια για το εκκεντρικό της στυλ εκείνη δεν πτοήθηκε ποτέ! Έχει σπουδάσει ΜΜΕ στο Καποδιστριακό και χαρακτηρίζει τον εαυτό της παιδί των media. Αυτή την περίοδο εργάζεται σε διαφημιστική εταιρεία και παράλληλα κάνει ραδιοφωνική εκπομπή σε web radio. Μέσα από τη μόδα και το στυλ θέλει να περάσει κοινωνικά μηνύματα, καθώς ασχολείται και με την ψυχολογία. Της αρέσει που είναι εκκεντρική και θέλει να γίνει η Lady Gaga της Ελλάδας!",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/amina_hakim_11.jpg",
    "type": "img",
  },
  Object {
    "text": "Αμίνα Χακίμ, 33 ετών, Βόλος",
    "type": "p",
  },
  Object {
    "text": "Η Αμίνα γεννήθηκε και μεγάλωσε στο Βόλο. Η μητέρα της ήταν Βολιώτισσα και ο πατέρα της Σύρος. Έχει σπουδάσει υποκριτική, αλλά δεν ασχολήθηκε ποτέ. Η Αμίνα είναι παντρεμένη και μητέρα ενός παιδιού. Στόχος της στο My Style Rocks είναι να δημιουργήσει τα πιο εκκεντρικά looks ώστε να καταφέρει να είναι η νικήτρια του show!",
    "type": "p",
  },
  Object {
    "src": "https://example.com/sites/default/files/lena_harizopoylos_41.jpg",
    "type": "img",
  },
  Object {
    "text": "Λένα Χαριζόπουλος, 40 ετών, Αθήνα",
    "type": "p",
  },
  Object {
    "text": "Η Λένα προέρχεται από εύπορη οικογένεια, η οποία διατηρούσε αλυσίδα φροντιστηρίων. Η ενασχόλησή της με τη μόδα ξεκίνησε στη Νέα Υόρκη, όπου μία φίλη της, που δούλευε ως merchandiser στη Victoria Secret, της πρότεινε να ασχοληθεί με τον χώρο. Είναι οπαδός του ευ ζην, της αρέσει η καλή ζωή και πάθος της είναι τα ταξίδια τα οποία και έχει καταφέρει να κάνει μέρος της δουλειάς της. Είναι σύμβουλος επικοινωνίας σε μεγάλους οίκους μόδας και διατηρεί lifestyle blog που έχει να κάνει με την αισθητική, την πολυτέλεια και ενίοτε με σχεδιαστές. Έχει δουλέψει ως υπεύθυνη επικοινωνίας και visual merchandiser στο Λονδίνο και στη Ρώμη σε μεγάλους οίκους μόδας. Έχει κάνει δύο γάμους.",
    "type": "p",
  },
  Object {
    "text": "Πηγή: skai.gr",
    "type": "p",
  },
]
`;

exports[`reads skai3 1`] = `
Array [
  Object {
    "text": "H πιο πρόσφατη ανακάλυψη της NASA οφείλεται σε έναν έφηβο, ο οποίος έκανε την πρακτική του. Ο Γουλφ Κάκιερ, μαθητής λυκείου από τη Νέα Υόρκη, κατά τη διάρκεια της πρακτικής του στη NASA, ανακάλυψε έναν πλανήτη που περιστρέφεται γύρω από δύο ήλιους.",
    "type": "p",
  },
  Object {
    "text": "Ο πλανήτης που ονομάστηκε TOI 1338 b, βρέθηκε 1.300 έτη φωτός μακριά και είναι το μοναδικό πλανητικό σύστημα με δύο άστρα. Το μέγεθός του είναι παρόμοιο με του Ποσειδώνα και του Κρόνου.",
    "type": "p",
  },
  Object {
    "text": "Ο Κάκιερ δήλωσε πως εντόπισε τον πλανήτη ενώ μελετούσε την έκλειψη στο σύστημα. Ερευνούσα τα στοιχεία που είχαν σημειώσει οι εθελοντές ως δυαδικό πλανητικό σύστημα, καθώς δύο άστρα περιστρέφονταν μεταξύ τους προκαλώντας έκλειψη το ένα στο άλλο, όπως φαινόταν από το δικό μας οπτικό πεδίο.",
    "type": "p",
  },
  Object {
    "text": "Τρεις μέρες από την έναρξη της πρακτικής του ο μαθητής έλαβε σήμα από ένα σύστημα που φαινόταν να βρίσκεται σε έκλειψη, αλλά ανακάλυψε τελικά ότι πρόκειται για ολόκληρο πλανήτη.",
    "type": "p",
  },
  Object {
    "src": "https://www.youtube.com/embed/8FrlhrtVEW8",
    "type": "video",
  },
  Object {
    "text": "Οι πλανήτες με δύο ήλιους είναι πολύ δύσκολο να εντοπιστούν. Η συμβολή του Κάκιερ στην ανακάλυψη του πλανητικού συστήματος ήταν πολύ σημαντική για να συλλεχθούν περαιτέρω στοιχεία για έρευνα.",
    "type": "p",
  },
  Object {
    "text": "Πηγή: NASA",
    "type": "p",
  },
]
`;

exports[`reads tvxs 1`] = `
Array [
  Object {
    "text": "Ο πρόεδρος του διοικητικού συμβουλίου και διευθύνων σύμβουλος της Facebook Μαρκ Ζούκερμπεργκ αποκάλυψε σήμερα το όραμά του για την κοινωνία το 2030, όταν η επαυξημένη πραγματικότητα θα έχει επιβληθεί, κάτι που θα αποτελέσει μια επανάσταση στις ανταλλαγές, σύμφωνα με τον ίδιο, στην οποία θα συμβάλει πολύ η κοινωνική δικτύωση.",
    "type": "p",
  },
  Object {
    "text": "Αυτή τη δεκαετία, θα επικεντρωθώ σε μακροπρόθεσμα ζητήματα. Αντί να θέσω στον εαυτό μου προκλήσεις με ορίζοντα ενός χρόνου, προσπάθησα να σκεφτώ πώς ελπίζω να είναι ο κόσμος και η ζωή μου το 2030, ώστε να εξασφαλίσω ότι θα αφιερώσω όλη την προσοχή μου σ’ αυτό, έγραψε ο Ζούκερμπεργκ στο Facebook.",
    "type": "p",
  },
  Object {
    "text": "Θα έχουμε την τεχνολογία για να αισθανόμαστε πλήρως την παρουσία ενός άλλου προσώπου, ανεξάρτητα από το πού θα βρίσκεται αυτό, και η επιστημονική έρευνα θα έχει βοηθήσει να γιατρευτούν και να προληφθούν ασθένειες ώστε το μέσο προσδόκιμο ζωής να παραταθεί κατά 2,5 χρόνια, πρόσθεσε.",
    "type": "p",
  },
  Object {
    "text": "Για τον ιδρυτή του Facebook, μέχρι το τέλος της δεκαετίας οι άνθρωποι θα έχουν εγκαταλείψει το κινητό τηλέφωνο αντικαθιστώντας το με γυαλιά επαυξημένης πραγματικότητας και θα έχουν ευρέως πρόσβαση στην εικονική πραγματικότητα.",
    "type": "p",
  },
  Object {
    "text": "Φανταστείτε ότι θα μπορείτε να ζείτε στο μέρος της επιλογής σας και να εργάζεσθε εύκολα σε ένα άλλο μέρος. Αν καταφέρουμε να πραγματοποιήσουμε αυτό για το οποίο εργαζόμαστε, η δυνατότητα αυτή θα είναι μέχρι το 2030 πολύ πιο κοντά στην πραγματικότητα, έγραψε.",
    "type": "p",
  },
  Object {
    "text": "Η άνοδος της εικονικής πραγματικότητας πρόκειται να αλλάξει τη φύση της κοινωνικής δικτύωσης. Αν το Ίντερνετ επέτρεψε σε δισεκατομμύρια ανθρώπους να συνδέονται όταν και όπου θέλουν, το κοινωνικό δίκτυο του μέλλοντος θα αφορά, σύμφωνα με τον ίδιο, τις ιδιωτικές αλληλεπιδράσεις και θα μας βοηθήσει να κατασκευάσουμε αυτές τις μικρές κοινότητες που έχουμε όλοι μας ανάγκη στη ζωή.",
    "type": "p",
  },
]
`;

exports[`reads zougla 1`] = `
Array [
  Object {
    "text": "Πρώτη καταχώρηση: Πέμπτη, 9 Ιανουαρίου 2020, 11:24",
    "type": "p",
  },
  Object {
    "src": "https://example.com/assets/images/2799088.jpg",
    "type": "img",
  },
  Object {
    "text": "Σεισμική δόνηση μεγέθους 6,3 βαθμών της κλίμακας Ρίχτερ σημειώθηκε πριν από λίγο στην Τσουκότκα, στην ανατολική Ρωσία. Μέχρι στιγμής δεν υπάρχουν αναφορές για θύματα ή ζημιές.",
    "type": "p",
  },
  Object {
    "text": "Το επίκεντρο του σεισμού εντοπίζεται 339 χιλιόμετρα βορειοανατολικά του Τιλιτσίκι, ενώ το εστιακό του βάθος υπολογίζεται στα 10 χλμ.",
    "type": "p",
  },
  Object {
    "text": "Τελευταία ενημέρωση: Πέμπτη, 9 Ιανουαρίου 2020, 12:07",
    "type": "p",
  },
]
`;
